several fixes to work on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,18 @@
 html, body {
 	height:				100%;
 	margin:				0px;
-	background-color:	#191919;
-}
-
-hr {
-	border:				0;
-	height:				2px;
-	background:			#444444;
 }
 
 p {
 	margin:				0;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+*:focus {
+    outline: none;
 }
 
 .btn-status {
@@ -80,13 +81,18 @@ p {
 }
 
 .recordButton {
-	margin:				10px 10px 0px 0px;
 	float:				right;
+	margin:				10px 10px 0px 0px;
 }
 
 .recordButton:hover {
 	background-color:	darkgrey;
 	color:				black;
+}
+
+#recordButtonsDiv {
+	float:				right;
+	width:				320px;
 }
 
 .sidenav {
@@ -95,7 +101,7 @@ p {
 	position:			fixed;
 	z-index:			1;
 	top:				0;
-	background-color:	#111;
+	background-color:	black;
 	overflow-x:			hidden;
 	transition:			.2s;
 	left:				0px;
@@ -129,8 +135,8 @@ p {
 }
 
 .main {
-	color:				black;
-	height:				97vh;
+	background-color:	black;
+	height:				100%;
 	transition:			.2s;
 	margin-left:		300px;
 	width:				calc(100% - 300px);
@@ -204,8 +210,8 @@ p {
 
 #showHideIconChannels {
 	float:				left;
-	margin-top:			6px;
-	margin-bottom:		24px;
+	margin-top:			0px;
+	margin-bottom:		30px;
 	margin-left:		8px;
 	border:				2px solid;
 }
@@ -250,7 +256,8 @@ p {
 	height:				100%;
 	padding-left:		0px;
 	padding-top:		7px;
-	overflow:			hidden;
+	overflow-x:			hidden;
+	overflow-y:			scroll;
 }
 
 #epg_channels {
@@ -274,17 +281,20 @@ p {
 	padding-left:		0px;
 	height:				635px;
 	display:			block;
+	overflow-x:			scroll;
 	overflow-y:			scroll;
 	scroll-behavior:	smooth;
 	scrollbar-width:	none;
 }
 
 #epg_bottom {
-	width:				1500px;
-	height:				250px;
+	max-width:			1500px;
+	height:				245px;
 	color:				#f1f1f1;
 	border:				3px solid #333333;
 	transition:			.2s;
+	margin-bottom:		20px;
+	margin-right:		20px;
 }
 
 .epg_bottom_wide {
@@ -292,21 +302,17 @@ p {
 }
 
 #epg_bottom_image {
-	width:				200px;
-	height:				200px;
+	max-width:			100%;
 	margin:				19px;
-	float:				left;
 	border:				3px solid #333333;
 }
 
 #epg_bottom_title {
-	margin-top:			15px;
 	margin-bottom:		0px;
-	float:				left;
 }
 
 #epg_bottom_placeholder {
-	width:				1250px;
+	width:				100%;
 	float:				left;
 }
 
@@ -321,6 +327,12 @@ p {
 	margin-top:			5px;
 }
 
+#epg_bottom_description {
+	height:				150px;
+	width:				97%;
+	margin-left:		10px;
+}
+
 #epg_summary {
 	margin:				0px;
 	margin-top:			5px;
@@ -330,6 +342,16 @@ p {
 	float:				left;
 	overflow:			hidden;
 }
+
+.epg_row2 {
+	width:				24000px;
+	padding:			0px;
+	display:			block;
+	float:				left;
+	clear:				left;
+	background-color:	yellow;
+}
+
 
 .epg_row {
 	width:				24000px;
@@ -341,10 +363,11 @@ p {
 }
 
 .epg_hr_row {
-	height:				3px;
-	margin:				10px;
-	margin-bottom:		4px;
+	height:				2px;
+	margin:				12px;
+	margin-bottom:		8px;
 	font-size:			0px;
+	background-color:	#cccccc;
 }
 
 .epg_unit {
@@ -364,7 +387,7 @@ p {
 	float:				left;
 	position:			relative;
 	left:				-3px;
-	top:				-21px;
+	top:				-14px;
 }
 
 .channel {
@@ -414,7 +437,3 @@ p {
 	border-right:		1px solid white;
 }
 
-@media screen and (max-height: 450px) {
-	.sidenav {padding-top: 15px;}
-	.sidenav a {font-size: 18px;}
-}
